kubernetes-tests/src/test/resources/test-v1beta1-validatingadmissionpolicy.yml
#
# Copyright (C) 2015 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  annotations:
    annotationsKey: annotationsValue
  creationTimestamp: "2008-01-01T01:01:01Z"
  deletionGracePeriodSeconds: 10
  deletionTimestamp: "2009-01-01T01:01:01Z"
  finalizers:
    - finalizersValue
  generateName: generateNameValue
  generation: 7
  labels:
    labelsKey: labelsValue
  managedFields:
    - apiVersion: apiVersionValue
      fieldsType: fieldsTypeValue
      fieldsV1: {}
      manager: managerValue
      operation: operationValue
      subresource: subresourceValue
      time: "2004-01-01T01:01:01Z"
  name: demo-policy.example.com
  namespace: namespaceValue
  ownerReferences:
    - apiVersion: apiVersionValue
      blockOwnerDeletion: true
      controller: true
      kind: kindValue
      name: nameValue
      uid: uidValue
  resourceVersion: resourceVersionValue
  selfLink: selfLinkValue
  uid: uidValue
spec:
  auditAnnotations:
    - key: keyValue
      valueExpression: valueExpressionValue
  failurePolicy: failurePolicyValue
  matchConditions:
    - expression: expressionValue
      name: nameValue
  matchConstraints:
    excludeResourceRules:
      - apiGroups:
          - apiGroupsValue
        apiVersions:
          - apiVersionsValue
        operations:
          - operationsValue
        resourceNames:
          - resourceNamesValue
        resources:
          - resourcesValue
        scope: scopeValue
    matchPolicy: matchPolicyValue
    namespaceSelector:
      matchExpressions:
        - key: keyValue
          operator: operatorValue
          values:
            - valuesValue
      matchLabels:
        matchLabelsKey: matchLabelsValue
    objectSelector:
      matchExpressions:
        - key: keyValue
          operator: operatorValue
          values:
            - valuesValue
      matchLabels:
        matchLabelsKey: matchLabelsValue
    resourceRules:
      - apiGroups:
          - apiGroupsValue
        apiVersions:
          - apiVersionsValue
        operations:
          - operationsValue
        resourceNames:
          - resourceNamesValue
        resources:
          - resourcesValue
        scope: scopeValue
  paramKind:
    apiVersion: apiVersionValue
    kind: kindValue
  validations:
    - expression: expressionValue
      message: messageValue
      messageExpression: messageExpressionValue
      reason: reasonValue
  variables:
    - expression: expressionValue
      name: nameValue
status:
  conditions:
    - lastTransitionTime: "2004-01-01T01:01:01Z"
      message: messageValue
      observedGeneration: 3
      reason: reasonValue
      status: statusValue
      type: typeValue
  observedGeneration: 1
  typeChecking:
    expressionWarnings:
      - fieldRef: fieldRefValue
        warning: warningValue
